--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/IconParkGamepad.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crossy Road Clone</title>
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div id="counter">0</div>
@@ -44,6 +44,6 @@
     <div id="end">
       <button id="retry">Retry</button>
     </div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
